<?xml version="1.0"?>
<package format="2">
  <name>ros2_console</name>
  <version>0.0.0</version>
  <description>
    Console/logging facilities for ROS 2.
  </description>
  <maintainer email="ponsler@gmail.com">Brett Ponsler</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>

  <exec_depend>rclcpp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
    
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
